--- a/static/styles.css
+++ b/static/styles.css
@@ -27,3 +27,12 @@ input[type=button], input[type=submit], input[type=reset], a[class="button"] {
     cursor: pointer;
     width: 100%;
 }
+/*table css*/
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+th, td {
+    border-bottom: 1px solid #ddd;
+}
+tr:hover {background-color: #f5f5f5;}
