--- a/static/styles.css
+++ b/static/styles.css
@@ -28,6 +28,12 @@ input[type=button], input[type=submit], input[type=reset], a[class="button"] {
     width: 100%;
 }
 /*table css*/
+table.center {
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+  width:80%;
+}
 th {
     background-color: #4CAF50;
     color: white;
